# MASTERS

./: .gitattributes  .gitignore  LICENSE  README.md
NN/NN/: NN.sln  README.md  main.py  pyproject.toml
NN/NN/NN/: NN.py  NN.pyproj  pyproject.toml
NN/NN/NN/Config/: BaseTypes.py  Config.py  __init__.py
NN/NN/NN/Config/ConfigEngine/: LoadConfig.py  __init__.py
NN/NN/NN/Config/ConfigFiles/: config.yaml
NN/NN/NN/Config/ConfigFiles/Dataset/: DatasetUE.yaml  UE.yaml
NN/NN/NN/Config/ConfigFiles/Loss/: MSE.yaml
NN/NN/NN/Config/ConfigUtils/: ConfigUtils.py  TrainingConfig.py  Utils.py  __init__.py
NN/NN/NN/CustomKernels/: setup.py
NN/NN/NN/CustomKernels/addKernel.egg-info/: PKG-INFO  SOURCES.txt
NN/NN/NN/CustomKernels/addKernel_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
NN/NN/NN/Dataloader/: DataloaderUtils.py  __init__.py
NN/NN/NN/Dataset/: DatasetBase.py  DatasetUE.py  Dataset_UE.py  __init__.py  create_dataset.py
NN/NN/NN/Dataset/NPY/: __init__.py  __main__.py  generate_npy.py
NN/NN/NN/Dataset/Transforms/: Transforms.py  __init__.py
NN/NN/NN/ImageProcessing/: Colorspace.py  ImageGradient.py  ImageTransform.py  __init__.py
NN/NN/NN/Loss/: LossBase.py  MSELoss.py  __init__.py
NN/NN/NN/Misc/: TemporalAA.py  __init__.py
NN/NN/NN/NeuralNetworkArchitecture/: ModelBase.py  ModelKPN.py  __init__.py
NN/NN/NN/NeuralNetworkArchitectures/: NN_Base.py
NN/NN/NN/Open3D/: Visualization.py  __init__.py
NN/NN/NN/TrainingPipeline/: TrainingPipeline.py  __init__.py
NN/NN/NN/tests/: testGradientDirectionLDR.exr  testGradientMagnitudeLDR.exr
(+90 files in other folders)
