[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NN"
version = "v1.0"
requires-python = ">= 3.11"
dependencies = [
    "hydra-core==1.3.2",
    "Imath==0.0.2",
    "OpenEXR",
    "matplotlib==3.10.5",
    "omegaconf==2.3.0",
    "open3d==0.19.0",
    "pandas==2.3.2",
    "setuptools==79.0.1",
    "torchmetrics==1.8.1",
    "tqdm==4.67.1",
    "numpy==2.3.2"
]
authors = [
    {name = "Damian", last_name="Andrysiak", email = "andrydamian@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"

[project.gui-scripts]
test = "test:main_test"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'